--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,15 @@
-
+{
+  "manifest_version": 3,
+  "name": "FNAF Cam Tab Switcher",
+  "version": "1.0",
+  "permissions": ["tabs", "storage", "scripting", "activeTab"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["main.js"]
+    }
+  ]
+}
