--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,13 @@
 {
   "manifest_version": 3,
   "name": "FNAF Cam Tab Switcher",
-  "version": "1.0",
+  "version": "1.1",
   "permissions": ["tabs", "storage", "scripting", "activeTab"],
-  "background": {
-    "service_worker": "background.js"
-  },
+  "background": { "service_worker": "background.js" },
   "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["main.js"]
-    }
+    { "matches": ["<all_urls>"], "js": ["main.js"] }
+  ],
+  "web_accessible_resources": [
+    { "resources": ["cam-button.png"], "matches": ["<all_urls>"] }
   ]
 }
