--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,25 @@
 {
   "manifest_version": 3,
-  "name": "FNAF Cam Tab Switcher",
-  "version": "1.1",
-  "permissions": ["tabs", "storage", "scripting", "activeTab"],
-  "background": { "service_worker": "background.js" },
+  "name": "FNAF Cam Extension",
+  "version": "1.0",
+  "description": "FNAF-style cam UI with tab switching",
+  "permissions": ["tabs", "activeTab", "scripting"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html"
+  },
   "content_scripts": [
-    { "matches": ["<all_urls>"], "js": ["main.js"] }
+    {
+      "matches": ["<all_urls>"],
+      "js": ["main.js"]
+    }
   ],
   "web_accessible_resources": [
-    { "resources": ["cam-button.png"], "matches": ["<all_urls>"] }
+    {
+      "resources": ["cam-button.png"],
+      "matches": ["<all_urls>"]
+    }
   ]
 }
